@@ -1,2 +1,6 @@
 ---
-selinux::mcstrans::service_name: mcstransd
+selinux::mcstrans_service_name: mcstransd
+
+selinux::manage_restorecond_package: false
+selinux::manage_restorecond_service: false
+selinux::restorecond_package_name: policycoreutils-restorecond
